# mcp-linkedin-manager

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  auth.py  client.py  linkedin-mcp.plugin  push-pr.sh  pyproject.toml  requirements.txt  server.py  setup.sh
.claude/: settings.local.json
.claude-plugin/: plugin.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
mcp/: README.md  __main__.py  auth.py  cache.py  client.py  log_config.py  pyproject.toml  server.py
mcp/linkedin_mcp/: __main__.py
mcp/tests/: conftest.py  test_auth_csrf.py  test_auth_flow.py  test_cache.py  test_client_version.py  test_connection_pool.py  test_keyring.py  test_playwright_pool.py  test_retry.py  test_users.py
scripts/: diagnose.py  install.sh  recover_voyager_session.py
skills/linkedin-authenticate/: SKILL.md
skills/linkedin-authenticate/references/: oauth-flow.md
skills/linkedin-discover/: SKILL.md
skills/linkedin-discover/references/: discover.md
skills/linkedin-posts/: SKILL.md
skills/linkedin-posts/references/: posts-ops.md
skills/linkedin-profile/: SKILL.md
skills/linkedin-profile/references/: profile-ops.md
skills/linkedin-setup/: SKILL.md
skills/linkedin-setup/references/: setup-steps.md
